<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/hostProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:text="@string/hostProfile"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/profileLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hostFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/hostFirstName"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txtHostFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/txtHostFirstName"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hostSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/hostSurname"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txtHostSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/txtHostSurname"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hostPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/hostPhoneNumber"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txtHostPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/txtHostPhoneNumber"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hostEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/hostEmail"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txtHostEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/txtHostEmail"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hostPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/hostPassword"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txtHostPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/txtHostPassword"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|left"
                android:text="@string/uploadImage"
                android:textSize="25dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Button"
                android:textSize="15dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>