<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customerPolicyPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtReviewPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/txtReviewPolicy"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtReviewPolicyParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/txtReviewPolicyParagraph"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/rentingTimeJustTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/rentingTimeJustTxt"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/txtStartTime"
                android:textSize="18sp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/txtSetStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSetStartTime"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:layout_marginStart="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/txtEndTime"
                android:textSize="18sp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/txtSetEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/txtSetEndTime"
                android:textSize="18sp"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp">

            <CheckBox
                android:id="@+id/agreeTermsAndConditionsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/agreeTermsAndConditionsBtn" />

            <CheckBox
                android:id="@+id/understoodTimePolicyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:minHeight="48dp"
                android:text="@string/understoodTimePolicyBtn" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirmPolicyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Confirm" />

    </LinearLayout>

</FrameLayout>