<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".confirmBookingForCustomer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/msgShowReqSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgShowReqSuccess"
            android:layout_margin="20dp"
            android:textColor="@color/teal_700"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/txtMsgReqWillFinalized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/txtMsgReqWillFinalized"
            android:textSize="20sp" />

        <Button
            android:id="@+id/CloseBtn"
            android:layout_width="274dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/CloseBtn"
            android:textSize="18sp" />
    </LinearLayout>
</FrameLayout>